feat: improve ARIA accessibility

--- a/apply.html
+++ b/apply.html
@@ -26,8 +26,8 @@
 <!--END OF HEAD-->
 
 <body class="application-body">
-    <main id="main">
-        <nav id="mobile-nav" aria-label="mobile navigation">
+    <main>
+        <nav id="mobile-nav" aria-labelledby="mobile-nav">
             <bento-sidebar id="sidebar1" side="right" hidden>
                 <ul class="bento">
                     <li><a href="index.html">Home</a></li>
@@ -39,11 +39,11 @@
                 </ul>
             </bento-sidebar>
             <!--SIDEBAR CONTROL-->
-            <figure class="buttons" style="margin: 0 0.5rem">
+            <figure class="buttons" style="margin: 0 0.5rem" aria-label="sidebar control">
                 <button id="open-sidebar" aria-label="menu"> 
                     <svg xmlns="http://www.w3.org/2000/svg" width="24"
                         height="24" viewBox="0 0 24 24" fill="none" stroke="#E0E6EB" stroke-width="2"
-                        stroke-linecap="round" stroke-linejoin="round" class="feather feather-menu">
+                        stroke-linecap="round" stroke-linejoin="round" class="feather feather-menu" aria-hidden="true">
                         <line x1="3" y1="12" x2="21" y2="12"></line>
                         <line x1="3" y1="6" x2="21" y2="6"></line>
                         <line x1="3" y1="18" x2="21" y2="18"></line>
@@ -53,7 +53,7 @@
             <a href="index.html" class="logo1" aria-label="logo">LOGO</a>
         </nav>
         <!--END OF MOBILE NAV-->
-        <header id="header" aria-label="header">
+        <header aria-label="header">
             <a href="index.html" class="logo2" aria-label="logo">LOGO</a>
             <nav id="desktop-nav" aria-label="desktop navigation">
                 <ul class="nav-links" aria-label="navigation links">
@@ -68,8 +68,8 @@
             <!--END OF DESKTOP NAV-->
         </header>
         <!--END OF HEADER-->
-        <article class="application" aria-label="application form">
-            <figure class="container">
+        <article class="application">
+            <figure class="container" aria-label="application form content">
                 <h2>Application Form</h2>
                 <form action="application form" method="post">
                     <fieldset>
@@ -178,35 +178,35 @@
             <!--END OF FOOTER MAIN SECTION-->
             <section id="footer-socials" aria-label="social media">
                 <ul class="footer-icons">
-                    <li><a href="#" aria-label="facebook">
+                    <li><a href="https://www.facebook.com" aria-label="facebook">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
                                 fill="none" stroke="#E0E6EB" stroke-width="2" stroke-linecap="round"
-                                stroke-linejoin="round" class="feather feather-facebook">
+                                stroke-linejoin="round" class="feather feather-facebook" aria-label="facebook">
                                 <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path>
                             </svg>
                         </a>
                     </li>
-                    <li><a href="#" aria-label="twitter">
+                    <li><a href="https://twitter.com/" aria-label="twitter">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
                                 fill="none" stroke="#E0E6EB" stroke-width="2" stroke-linecap="round"
-                                stroke-linejoin="round" class="feather feather-twitter">
+                                stroke-linejoin="round" class="feather feather-twitter" aria-label="twitter">
                                 <path
                                     d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z">
                                 </path>
                             </svg>
                         </a>
                     </li>
-                    <li><a href="#" aria-label="instagram">
+                    <li><a href="https://www.instagram.com/">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
                                 fill="none" stroke="#E0E6EB" stroke-width="2" stroke-linecap="round"
-                                stroke-linejoin="round" class="feather feather-instagram">
+                                stroke-linejoin="round" class="feather feather-instagram" aria-label="instagram">
                                 <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
                                 <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
                                 <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
                             </svg>
                         </a>
                     </li>
-                    <li><a href="#" aria-label="github">
+                    <li><a href="https://github.com" aria-label="github">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
                                 fill="none" stroke="#E0E6EB" stroke-width="2" stroke-linecap="round"
                                 stroke-linejoin="round" class="feather feather-github">
@@ -216,10 +216,10 @@
                             </svg>
                         </a>
                     </li>
-                    <li><a href="#" aria-label="linkedin">
+                    <li><a href="https://www.linkedin.com" aria-label="linkedin">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
                                 fill="none" stroke="#E0E6EB" stroke-width="2" stroke-linecap="round"
-                                stroke-linejoin="round" class="feather feather-linkedin">
+                                stroke-linejoin="round" class="feather feather-linkedin" aria-label="linkedin">
                                 <path
                                     d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z">
                                 </path>
@@ -228,10 +228,10 @@
                             </svg>
                         </a>
                     </li>
-                    <li><a href="#" aria-label="youtube">
+                    <li><a href="https://www.youtube.com" aria-label="youtube">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
                                 fill="none" stroke="#E0E6EB" stroke-width="2" stroke-linecap="round"
-                                stroke-linejoin="round" class="feather feather-youtube">
+                                stroke-linejoin="round" class="feather feather-youtube" aria-label="youtube">
                                 <path
                                     d="M22.54 6.42a2.78 2.78 0 0 0-1.94-2C18.88 4 12 4 12 4s-6.88 0-8.6.46a2.78 2.78 0 0 0-1.94 2A29 29 0 0 0 1 11.75a29 29 0 0 0 .46 5.33A2.78 2.78 0 0 0 3.4 19c1.72.46 8.6.46 8.6.46s6.88 0 8.6-.46a2.78 2.78 0 0 0 1.94-2 29 29 0 0 0 .46-5.25 29 29 0 0 0-.46-5.33z">
                                 </path>
@@ -247,7 +247,7 @@
                     <ul class="footer-legal-items">
                         <li><a href="#">Terms &amp; Conditions</a></li>
                         <li><a href="#">Privacy Policy</a></li>
-                        <li>Made by <a href="https://cgathua.pages.dev/" target="_blank">@cgathua</a></li>
+                        <li>Made by <a href="https://cgathua.pages.dev/" target="_blank" aria-label="link to @cgathua">@cgathua</a></li>
                     </ul>
                 </small>
             </section>
