--- a/signin.html
+++ b/signin.html
@@ -28,8 +28,8 @@
 <!--END OF HEAD-->
 
 <body>
-    <main id="main">
-        <nav id="mobile-nav" aria-label="mobile navigation">
+    <main>
+        <nav id="mobile-nav" aria-labelledby="mobile-nav">
             <bento-sidebar id="sidebar1" side="right" hidden>
                 <ul class="bento">
                     <li><a href="index.html">Home</a></li>
@@ -41,11 +41,11 @@
                 </ul>
             </bento-sidebar>
             <!--SIDEBAR CONTROL-->
-            <figure class="buttons" style="margin: 0 0.5rem">
+            <figure class="buttons" style="margin: 0 0.5rem" aria-label="sidebar control">
                 <button id="open-sidebar" aria-label="menu">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                         stroke="#E0E6EB" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                        class="feather feather-menu">
+                        class="feather feather-menu" aria-hidden="true">
                         <line x1="3" y1="12" x2="21" y2="12"></line>
                         <line x1="3" y1="6" x2="21" y2="6"></line>
                         <line x1="3" y1="18" x2="21" y2="18"></line>
@@ -55,7 +55,7 @@
             <a href="index.html" class="logo1" aria-label="logo">LOGO</a>
         </nav>
         <!--END OF MOBILE NAV-->
-        <header id="header" aria-label="header">
+        <header aria-label="header">
             <a href="index.html" class="logo2" aria-label="logo">LOGO</a>
             <nav id="desktop-nav" aria-label="desktop navigation">
                 <ul class="nav-links" aria-label="navigation links">
@@ -70,8 +70,8 @@
             <!--END OF DESKTOP NAV-->
         </header>
         <!--END OF HEADER-->
-        <article class="sign-in" aria-label="sign in form">
-            <figure class="container">
+        <article class="sign-in">
+            <figure class="container" aria-label="sign in form">
                 <form action="sign in" method="post">
                     <fieldset>
                         <legend class="signin-legend">
@@ -113,18 +113,18 @@
                         </label>
                         <label for="password"> Password:<input id="password" name="password" type="password" required />
                         </label>
-                        <label for="remember-me" name="remember-me"><input id="remember-me" type="checkbox"
+                        <label for="remember-me" name="remember-me" aria-labelledby="remember-me"><input id="remember-me" type="checkbox"
                             class="inline">
                             Remember Me
                         </label>
-                        <label for="submit"><input type="submit" id="submit" class="sign_in" value="sign in"
+                        <label for="submit" aria-labelledby="submit"><input type="submit" id="submit" class="sign_in" value="sign in"
                             aria-label="click button">
                         </label>
                     </fieldset>
                     <fieldset>
                         <legend>
-                            <small class="forgot-password"><a href="#">Forgot UserName or Password?</small></p>
-                            <small class="forgot-password"><a href="#">Create New Online Account</small></p>
+                            <small class="forgot-password"><a href="#" aria-label="Forgot UserName or Password link">Forgot UserName or Password?</small></p>
+                            <small class="forgot-password"><a href="#" aria-label="Create New Online Account link">Create New Online Account</small></p>
                         </legend>
                     </fieldset>
                 </form>
@@ -132,7 +132,7 @@
             <!--END OF SIGN IN FORM-->
         </article>
         <!--END OF SIGN IN SECTION-->
-        <footer id="footer" aria-label="footer">
+        <footer aria-label="footer">
             <section id="footer-main">
                 <article class="footer-column">
                     <h3 class="footer-title">Permalinks</h3>
@@ -179,48 +179,48 @@
             <!--END OF FOOTER MAIN SECTION-->
             <section id="footer-socials" aria-label="social media">
                 <ul class="footer-icons">
-                    <li><a href="#" aria-label="facebook">
+                    <li><a href="https://www.facebook.com">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
                                 fill="none" stroke="#E0E6EB" stroke-width="2" stroke-linecap="round"
-                                stroke-linejoin="round" class="feather feather-facebook">
+                                stroke-linejoin="round" class="feather feather-facebook" aria-label="facebook">
                                 <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path>
                             </svg>
                         </a>
                     </li>
-                    <li><a href="#" aria-label="twitter">
+                    <li><a href="https://twitter.com/">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
                                 fill="none" stroke="#E0E6EB" stroke-width="2" stroke-linecap="round"
-                                stroke-linejoin="round" class="feather feather-twitter">
+                                stroke-linejoin="round" class="feather feather-twitter" aria-label="twitter">
                                 <path
                                     d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z">
                                 </path>
                             </svg>
                         </a>
                     </li>
-                    <li><a href="#" aria-label="instagram">
+                    <li><a href="https://www.instagram.com/">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
                                 fill="none" stroke="#E0E6EB" stroke-width="2" stroke-linecap="round"
-                                stroke-linejoin="round" class="feather feather-instagram">
+                                stroke-linejoin="round" class="feather feather-instagram" aria-label="instagram">
                                 <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
                                 <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
                                 <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
                             </svg>
                         </a>
                     </li>
-                    <li><a href="#" aria-label="github">
+                    <li><a href="https://github.com">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
                                 fill="none" stroke="#E0E6EB" stroke-width="2" stroke-linecap="round"
-                                stroke-linejoin="round" class="feather feather-github">
+                                stroke-linejoin="round" class="feather feather-github" aria-label="github">
                                 <path
                                     d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22">
                                 </path>
                             </svg>
                         </a>
                     </li>
-                    <li><a href="#" aria-label="linkedin">
+                    <li><a href="https://www.linkedin.com">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
                                 fill="none" stroke="#E0E6EB" stroke-width="2" stroke-linecap="round"
-                                stroke-linejoin="round" class="feather feather-linkedin">
+                                stroke-linejoin="round" class="feather feather-linkedin" aria-label="linkedin">
                                 <path
                                     d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z">
                                 </path>
@@ -229,10 +229,10 @@
                             </svg>
                         </a>
                     </li>
-                    <li><a href="#" aria-label="youtube">
+                    <li><a href="https://www.youtube.com">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
                                 fill="none" stroke="#E0E6EB" stroke-width="2" stroke-linecap="round"
-                                stroke-linejoin="round" class="feather feather-youtube">
+                                stroke-linejoin="round" class="feather feather-youtube" aria-label="youtube">
                                 <path
                                     d="M22.54 6.42a2.78 2.78 0 0 0-1.94-2C18.88 4 12 4 12 4s-6.88 0-8.6.46a2.78 2.78 0 0 0-1.94 2A29 29 0 0 0 1 11.75a29 29 0 0 0 .46 5.33A2.78 2.78 0 0 0 3.4 19c1.72.46 8.6.46 8.6.46s6.88 0 8.6-.46a2.78 2.78 0 0 0 1.94-2 29 29 0 0 0 .46-5.25 29 29 0 0 0-.46-5.33z">
                                 </path>
@@ -248,7 +248,7 @@
                     <ul class="footer-legal-items">
                         <li><a href="#">Terms &amp; Conditions</a></li>
                         <li><a href="#">Privacy Policy</a></li>
-                        <li>Made by <a href="https://cgathua.pages.dev/" target="_blank">@cgathua</a></li>
+                        <li>Made by <a href="https://cgathua.pages.dev/" target="_blank" aria-label="link to @cgathua">@cgathua</a></li>
                     </ul>
                 </small>
             </section>
