--- a/contact.html
+++ b/contact.html
@@ -28,8 +28,8 @@
 <!--END OF HEAD-->
 
 <body>
-    <main id="main">
-        <nav id="mobile-nav" aria-label="mobile navigation">
+    <main>
+        <nav id="mobile-nav" aria-labelledby="mobile-nav">
             <bento-sidebar id="sidebar1" side="right" hidden>
                 <ul class="bento">
                     <li><a href="index.html">Home</a></li>
@@ -41,10 +41,10 @@
                 </ul>
             </bento-sidebar>
             <!--SIDEBAR CONTROL-->
-            <figure class="buttons" style="margin: 0 0.5rem">
+            <figure class="buttons" style="margin: 0 0.5rem"aria-label="sidebar control">
                 <button id="open-sidebar" aria-label="menu"> <svg xmlns="http://www.w3.org/2000/svg" width="24"
                         height="24" viewBox="0 0 24 24" fill="none" stroke="#E0E6EB" stroke-width="2"
-                        stroke-linecap="round" stroke-linejoin="round" class="feather feather-menu">
+                        stroke-linecap="round" stroke-linejoin="round" class="feather feather-menu" aria-hidden="true">
                         <line x1="3" y1="12" x2="21" y2="12"></line>
                         <line x1="3" y1="6" x2="21" y2="6"></line>
                         <line x1="3" y1="18" x2="21" y2="18"></line>
@@ -54,7 +54,7 @@
             <a href="index.html" class="logo1" aria-label="logo">LOGO</a>
         </nav>
         <!--END OF MOBILE NAV-->
-        <header id="header" aria-label="header">
+        <header aria-label="header">
             <a href="index.html" class="logo2" aria-label="logo">LOGO</a>
             <nav id="desktop-nav" aria-label="desktop navigation">
                 <ul class="nav-links" aria-label="navigation links">
@@ -69,9 +69,9 @@
             <!--END OF DESKTOP NAV-->
         </header>
         <!--END OF HEADER-->
-        <section id="contact" class="contact" aria-label="contact">
-            <figure class="container">
-                <form action="contact-form" aria-label="contact-form">
+        <section id="contact" class="contact" aria-labelledby="contact">
+            <figure class="container" aria-label="contact content" >
+                <form action="contact-form">
                     <fieldset>
                         <legend>
                             <label for="name">Name <input id="name" type="text" 
@@ -99,42 +99,42 @@
                 <aside aria-label="aside">
                     <h3>Contact Information</h3>
                     <p>How can we help?</p>
-                    <figure class="info">
-                        <article aria-label="article">
+                    <figure class="info" aria-label="how to reach us">
+                        <article>
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                 fill="none" stroke="#05141A" stroke-width="2" stroke-linecap="round"
-                                stroke-linejoin="round" class="feather feather-mail">
+                                stroke-linejoin="round" class="feather feather-mail" aria-hidden="true">
                                 <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z">
                                 </path>
                                 <polyline points="22,6 12,13 2,6"></polyline>
                             </svg>
-                            <figure class="details">
+                            <figure class="details" aria-label="email info">
                                 <h4>Email</h4>
                                 <p>info@logo.com</p>
                             </figure>
                         </article>
-                        <article aria-label="article">
+                        <article>
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                 fill="none" stroke="#05141A" stroke-width="2" stroke-linecap="round"
-                                stroke-linejoin="round" class="feather feather-map-pin">
+                                stroke-linejoin="round" class="feather feather-map-pin" aria-hidden="true">
                                 <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
                                 <circle cx="12" cy="10" r="3"></circle>
                             </svg>
-                            <figure class="details">
+                            <figure class="details" aria-label="location info">
                                 <h4>Location</h4>
                                 <p>748 Grove Street</p>
                                 <p>Atlanta, Georgia 30144</p>
                             </figure>
                         </article>
-                        <article aria-label="article">
+                        <article>
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                 fill="none" stroke="#05141A" stroke-width="2" stroke-linecap="round"
-                                stroke-linejoin="round" class="feather feather-phone">
+                                stroke-linejoin="round" class="feather feather-phone" aria-hidden="true">
                                 <path
                                     d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z">
                                 </path>
                             </svg>
-                            <figure class="details">
+                            <figure class="details" aria-label="telephone and business hours">
                                 <h4>Telephone</h4>
                                 <p>Weekdays 8am-5pm</p>
                                 <p>(404) 000-0001</p>
@@ -145,7 +145,7 @@
             </figure>
             <!--END OF ASIDE INFORMATION-->
         </section>
-        <footer id="footer" aria-label="footer">
+        <footer aria-label="footer">
             <section id="footer-main">
                 <article class="footer-column">
                     <h3 class="footer-title">Permalinks</h3>
@@ -194,48 +194,48 @@
             <!--END OF FOOTER MAIN SECTION-->
             <section id="footer-socials" aria-label="social media">
                 <ul class="footer-icons">
-                    <li><a href="#" aria-label="facebook">
+                    <li><a href="https://www.facebook.com" aria-label="facebook">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                 viewBox="0 0 24 24" fill="none" stroke="#E0E6EB" stroke-width="2" stroke-linecap="round"
-                                stroke-linejoin="round" class="feather feather-facebook">
+                                stroke-linejoin="round" class="feather feather-facebook" aria-label="facebook">
                                 <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path>
                             </svg>
                         </a>
                     </li>
-                    <li><a href="#" aria-label="twitter">
+                    <li><a href="https://twitter.com/">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                 viewBox="0 0 24 24" fill="none" stroke="#E0E6EB" stroke-width="2" stroke-linecap="round"
-                                stroke-linejoin="round" class="feather feather-twitter">
+                                stroke-linejoin="round" class="feather feather-twitter" aria-label="twitter">
                                 <path
                                     d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z">
                                 </path>
                             </svg>
                         </a>
                     </li>
-                    <li><a href="#" aria-label="instagram">
+                    <li><a href="https://www.instagram.com/">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16"
                                 height="16" viewBox="0 0 24 24" fill="none" stroke="#E0E6EB" stroke-width="2"
-                                stroke-linecap="round" stroke-linejoin="round" class="feather feather-instagram">
+                                stroke-linecap="round" stroke-linejoin="round" class="feather feather-instagram" aria-label="instagram">
                                 <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
                                 <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
                                 <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
                             </svg>
                         </a>
                     </li>
-                    <li><a href="#" aria-label="github">
+                    <li><a href="https://github.com" aria-label="github">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                 viewBox="0 0 24 24" fill="none" stroke="#E0E6EB" stroke-width="2" stroke-linecap="round"
-                                stroke-linejoin="round" class="feather feather-github">
+                                stroke-linejoin="round" class="feather feather-github" aria-label="github">
                                 <path
                                     d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22">
                                 </path>
                             </svg>
                         </a>
                     </li>
-                    <li><a href="#" aria-label="linkedin">
+                    <li><a href="https://www.linkedin.com" aria-label="linkedin">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                 viewBox="0 0 24 24" fill="none" stroke="#E0E6EB" stroke-width="2" stroke-linecap="round"
-                                stroke-linejoin="round" class="feather feather-linkedin">
+                                stroke-linejoin="round" class="feather feather-linkedin" aria-label="linkedin">
                                 <path
                                     d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z">
                                 </path>
@@ -244,10 +244,10 @@
                             </svg>
                         </a>
                     </li>
-                    <li><a href="#" aria-label="youtube">
+                    <li><a href="https://www.youtube.com" aria-label="youtube">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                 viewBox="0 0 24 24" fill="none" stroke="#E0E6EB" stroke-width="2" stroke-linecap="round"
-                                stroke-linejoin="round" class="feather feather-youtube">
+                                stroke-linejoin="round" class="feather feather-youtube" aria-label="youtube">
                                 <path
                                     d="M22.54 6.42a2.78 2.78 0 0 0-1.94-2C18.88 4 12 4 12 4s-6.88 0-8.6.46a2.78 2.78 0 0 0-1.94 2A29 29 0 0 0 1 11.75a29 29 0 0 0 .46 5.33A2.78 2.78 0 0 0 3.4 19c1.72.46 8.6.46 8.6.46s6.88 0 8.6-.46a2.78 2.78 0 0 0 1.94-2 29 29 0 0 0 .46-5.25 29 29 0 0 0-.46-5.33z">
                                 </path>
@@ -263,7 +263,7 @@
                     <ul class="footer-legal-items">
                         <li><a href="#">Terms &amp; Conditions</a></li>
                         <li><a href="#">Privacy Policy</a></li>
-                        <li>Made by <a href="https://cgathua.pages.dev/" target="_blank">@cgathua</a></li>
+                        <li>Made by <a href="https://cgathua.pages.dev/" target="_blank" aria-label="link to @cgathua">@cgathua</a></li>
                     </ul>
                 </small>
             </section>
