--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
             <!--END OF DESKTOP NAV-->
         </header>
         <!--END OF HEADER-->
-        <section id="contact" class="contact" aria-labelledby="contact">
+        <section id="contact" class="contact">
             <figure class="container" aria-label="contact content" >
                 <form action="contact-form">
                     <fieldset>
