--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <!--END OF DESKTOP NAV-->
         </header>
         <!--END OF HEADER-->
-        <section id="about" aria-labelledby="about">
+        <section id="about">
             <figure class="container" aria-label="about content">
                 <article class="about-article">
                     <a href="apply.html">
@@ -98,7 +98,7 @@
                 />
             </figure>
         </section>
-        <section id="benefits" aria-labelledby="benefits">
+        <section id="benefits">
             <h2>Benefits</h2>
             <figure class="container" aria-label="benefits content">
                 <article class="benefits-column">
@@ -219,7 +219,7 @@
             </figure>
         </section>
         <!--END OF BENEFITS SECTION-->
-        <section id="credit_cards" class="credit_section" aria-labelledby="credit_cards">
+        <section id="credit_cards" class="credit_section">
             <h2>Credit Cards</h2>
             <figure class="container" aria-label="credit card content">
                 <figure class="creditcard" aria-label="platinum card content">
