--- a/signin.html
+++ b/signin.html
@@ -71,7 +71,7 @@
         </header>
         <!--END OF HEADER-->
         <article class="sign-in">
-            <figure class="container" aria-label="sign in form">
+            <figure class="container" aria-label="sign-in form">
                 <form action="sign in" method="post">
                     <fieldset>
                         <legend class="signin-legend">
@@ -123,27 +123,27 @@
                     </fieldset>
                     <fieldset>
                         <legend>
-                            <small class="forgot-password"><a href="#" aria-label="Forgot UserName or Password link">Forgot UserName or Password?</small></p>
-                            <small class="forgot-password"><a href="#" aria-label="Create New Online Account link">Create New Online Account</small></p>
+                            <small class="forgot-password"><a href="#" aria-label="Forgot UserName or Password">Forgot UserName or Password?</small></p>
+                            <small class="forgot-password"><a href="#" aria-label="Create New Online Account">Create New Online Account</small></p>
                         </legend>
                     </fieldset>
                 </form>
             </figure>
             <!--END OF SIGN IN FORM-->
         </article>
-        <!--END OF SIGN IN SECTION-->
+        <!--END OF SIGN IN ARTICLE-->
         <footer aria-label="footer">
             <section id="footer-main">
                 <article class="footer-column">
-                    <h3 class="footer-title">Permalinks</h3>
+                    <h3 class="footer-title">Permalinks</h3>   
                     <ul>
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="index.html">Home</a></small>
                         <li><a href="index.html#benefits">Benefits</a></li>
                         <li><a href="index.html#credit_cards">Credit Cards</a></li>
                         <li><a href="apply.html">Apply Now</a></li>
                         <li><a href="contact.html">Contact</a></li>
                         <li><a href="signin.html">Sign In</a></li>
-                    </ul>
+                    </ul> 
                 </article>
                 <article class="footer-column">
                     <h3 class="footer-title">Photo Credit</h3>
