fix: sign-in anchor tags

--- a/signin.html
+++ b/signin.html
@@ -122,9 +122,9 @@
                         </label>
                     </fieldset>
                     <fieldset>
-                        <legend>
-                            <small class="forgot-password"><a href="#" aria-label="Forgot UserName or Password">Forgot UserName or Password?</small></p>
-                            <small class="forgot-password"><a href="#" aria-label="Create New Online Account">Create New Online Account</small></p>
+                        <legend class="reminder-prompt">
+                            <small class="forgot-password"><a href="signin.html">Forgot UserName or Password?</a></small>
+                            <small class="forgot-password"><a href="signin.html">Create New Online Account</a></small>
                         </legend>
                     </fieldset>
                 </form>
